# slack-app

./: .gitignore
app/: pyproject.toml
app/src/app/: function.py  handler.py
app/tests/: handler_test.py
scripts/: deploy.sh
