[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Yu Yamada",email = "ya4ma1da3@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "slack-bolt (>=1.23.0,<2.0.0)",
    "slack-sdk (>=3.35.0,<4.0.0)",
    "boto3 (>=1.38.36,<2.0.0)"
]

[tool.poetry]
packages = [{include = "app", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-plugin-lambda-build]
function-artifact-path = "package.zip"
